# test_paper_recognition

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
src/: archive.py  detect.py  fetch_page.py  main.py  main_vl.py  paper_typing.py  scan.py  scan_demo.py  summary.py  web.py
src/agent/: __init__.py  category_agent.py  mistake_agent.py  utils.py
src/ocr/: __init__.py
src/templates/: directory_browser.html
