[project]
name = "test-paper-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filetype>=1.2.0",
    "onnxruntime>=1.21.0",
    "pydantic-ai>=0.0.46",
    "pymupdf>=1.25.5",
    "rapidocr==2.0.5",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
include = ["src"]

executionEnvironments = [
  { root = "src" }
]
