[project]
name = "test-paper-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "filetype>=1.2.0",
    "jinja2>=3.1.6",
    "onnxruntime>=1.21.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic-ai>=0.0.46",
    "pymupdf>=1.25.5",
    "pywin32>=310",
    "rapidocr==2.0.5",
    "requests>=2.32.3",
    "uvicorn>=0.34.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
include = ["src"]

executionEnvironments = [
  { root = "src" }
]
